# stuff

./: .clang-format  .gitignore  .vimrc  CMakeLists.txt  README.md  conanfile.txt  conaninstall.bat  conaninstall.sh  default-generate.sh  unix-debug-generate.sh  unix-release-generate.sh  unix-relwithdeb-generate.sh  vcpkg-init-unix.sh  vcpkg.json.backup  vs-debug-generate.bat  vs-release-generate.bat  vs-relwithdeb-generate.bat  vs2019-debug-generate.bat  vs2019-release-generate.bat
.cache/clangd/index/: adopted_thread.cpp.16177EA66980933B.idx  adopted_thread.h.FC1942566EE5B1B1.idx  atomic_helpers.h.4972BF8176204AD8.idx  benchmark_message.cpp.48D2CFBB0EF3EE76.idx  benchmark_message.h.D8F725A03A047A3A.idx  benchmarks.cpp.AF1B740D2044588C.idx  command_line_arguments.cpp.74E00E33C1447435.idx  command_line_arguments.h.9217508B1458D34E.idx  config.cpp.D77277A6CACA58D9.idx  config.h.5EDD5CA197B9D91A.idx  dispatcher.cpp.CD52A3A18AF52A86.idx  dispatcher.h.9694D65853509E80.idx  errors.cpp.11D56D4D248649CB.idx  errors.cpp.C9F3246705448093.idx  errors.h.4F945FCDF63EDC3D.idx  errors.h.53308D73F08F8C4D.idx  fields.h.7B0AEEA9627FABC9.idx  fix_message.h.E35FDA019AC05176.idx  fix_message_parser.cpp.D2A814BD36F919C2.idx  fix_message_parser.h.1698B699CEF6CB4B.idx  free_bsd_event_processor.cpp.3D9985DFE21BEBC1.idx  free_bsd_event_processor.h.09560F7C43FFA431.idx  ievent_processor.h.4125AB6A0D732C9A.idx  invoke_slot_message.cpp.43F9313D469A49EB.idx  invoke_slot_message.h.F6F222FEBBFD70FC.idx  locked.h.4C7B4456F8075202.idx  logger.cpp.52741122999038E6.idx  logger.h.42E9BC28BFDCE19A.idx  logger.h.A3E2C01772BD4D42.idx  logger.h.C9583A532120313F.idx  main.cpp.22DEAAF962DD5D09.idx  main.cpp.2F5924711D5E5B1C.idx  main.cpp.336728E4E267A6CC.idx  main.cpp.36C523376BECC859.idx  main.cpp.39FE7D8DEDF4CA56.idx  main.cpp.5D0BB9A88988EC77.idx  main.cpp.8267F318505B4D93.idx  main.cpp.88F0307A38AB8EB0.idx  main.cpp.8B0C218A22EE40BB.idx  main.cpp.AFBA5FDF5C19BABC.idx  (+69 more)
cmake/: clang_options.cmake  make_executable_sanitized_target.cmake  make_sanitized_target.cmake  make_shared_library_sanitized_target.cmake  make_static_library_sanitized_target.cmake  msvc_options.cmake
projects/: tags
projects/binary-search/: CMakeLists.txt  main.cpp
projects/circular-buffer/: CMakeLists.txt  circular_buffer.h  main.cpp  stdafx.h
projects/cpp20/: CMakeLists.txt  main.cpp
projects/datetime/: CMakeLists.txt  main.cpp
projects/event-objects/: CMakeLists.txt  abstract_message.cpp  abstract_message.h  abstract_object.cpp  abstract_object.h  adopted_thread.cpp  adopted_thread.h  application.cpp  application.h  atomic_helpers.h  delivery_message.cpp  delivery_message.h  dispatcher.cpp  dispatcher.h  event_loop.cpp  event_loop.h  event_visitor.cpp  event_visitor.h  ievent.h  ievent_visitor.h  imessage.h  imessage_visitor.h  kafka_consumer.cpp  kafka_consumer.h  kafka_message_notification.cpp  kafka_message_notification.h  kafka_publisher.cpp  kafka_publisher.h  logger.cpp  logger.h  loop_started.cpp  loop_started.h  main.cpp  message1_event.cpp  message1_event.h  message2_event.cpp  message2_event.h  message_queue.cpp  message_queue.h  message_visitor.cpp  (+9 more)
projects/fixparser/: CMakeLists.txt  errors.cpp  errors.h  fix_message.h  fix_message_parser.cpp  fix_message_parser.h  main.cpp
projects/fixparser/app/: CMakeLists.txt  main.cpp  stdafx.h
projects/fixparser/benchmarks/: CMakeLists.txt  benchmarks.cpp  stdafx.h
projects/fixparser/fixparser/: CMakeLists.txt  errors.cpp  errors.h  fields.h  fix_message.h  fix_message_parser.cpp  (+3 more)
projects/graph/: CMakeLists.txt  main.cpp
projects/grpc-server/: CMakeLists.txt
projects/grpc-server/proto/: CMakeLists.txt  clickhouse.proto
projects/index-sequence/: CMakeLists.txt  main.cpp
projects/merge-sort/: CMakeLists.txt  main.cpp
projects/message-driven-objects/: CMakeLists.txt  abstract_message.cpp  abstract_message.h  adopted_thread.cpp  adopted_thread.h  application.cpp  application.h  atomic_helpers.h  dispatcher.cpp  dispatcher.h  imessage.h  imessage_visitor.h  invoke_slot_message.cpp  invoke_slot_message.h  kafka_consumer.cpp  kafka_consumer.h  kafka_publisher.cpp  kafka_publisher.h  locked.h  logger.cpp  logger.h  loop_started.cpp  loop_started.h  main.cpp  message_queue.cpp  message_queue.h  message_visitor.cpp  message_visitor.h  not_null.h  object.cpp  object.h  objects_registry.h  signal.h  stdafx.h  text_message.cpp  text_message.h  thread.cpp  thread.h  thread_data.cpp  thread_data.h  (+6 more)
projects/message-driven-objects/message-driven-objects/: CMakeLists.txt  abstract_message.cpp  abstract_message.h  adopted_thread.cpp  adopted_thread.h  atomic_helpers.h  benchmark_message.cpp  benchmark_message.h  dispatcher.cpp  dispatcher.h  iexecution_policy.h  imessage.h  imessage_visitor.h  invoke_slot_message.cpp  invoke_slot_message.h  locked.h  logger.cpp  logger.h  message.h  message_base.cpp  message_base.h  message_queue.cpp  message_queue.h  message_visitor.cpp  message_visitor.h  not_null.h  object.cpp  object.h  objects_registry.h  overloaded.h  set_thread_name_message.cpp  set_thread_name_message.h  signal_impl.h  single_thread_execution_policy.cpp  single_thread_execution_policy.h  stdafx.h  test_message.cpp  test_message.h  thread.cpp  thread.h  (+12 more)
projects/multithreaded/: CMakeLists.txt  main.cpp  sync_by_flag.h  sync_by_mutex.h
projects/quick-sort/: CMakeLists.txt  main.cpp
projects/quiz1/: CMakeLists.txt  main.cpp
projects/tcp-client/: CMakeLists.txt  main.cpp  stdafx.h
projects/tcp-server/: CMakeLists.txt  free_bsd_event_processor.cpp  free_bsd_event_processor.h  ievent_processor.h  main.cpp  runnable.h  stdafx.h  tcp_socket.cpp  tcp_socket.h
projects/timer/: CMakeLists.txt  main.cpp
projects/tuple/: CMakeLists.txt  main.cpp  tuple.h  type_at_index.h  type_in_pack.h
projects/visitor-pattern/: CMakeLists.txt  main.cpp
projects/write-to-kafka/: CMakeLists.txt  command_line_arguments.cpp  command_line_arguments.h  config.cpp  config.h  errors.cpp  errors.h  kafka_producer.h  logger.cpp  logger.h  main.cpp  producer.cpp  producer.h  stdafx.h  types.h
(+62 files in other folders)
